--- a/MiFit/res/values-fr/strings.xml
+++ b/MiFit/res/values-fr/strings.xml
@@ -3,17 +3,135 @@
     <string name="app_name">Mi Fit</string>
     <string name="share_uninstall_client">"Cette application n'est pas installée."</string>
     <string name="share_miliao_too_old">La version de Mi Talk que vous utilisez est trop ancienne.</string>
+    <string name="share_prepare_tips">Préparation des données…</string>
+    <string name="share_weibo_label">Weibo</string>
+    <string name="share_pengyouquan_label">Moments</string>
+    <string name="share_weixin_label">WeChat</string>
+    <string name="share_qq_label">QQ</string>
+    <string name="share_qq_zone_label">QZone</string>
+    <string name="share_miliao_label">Mi Talk</string>
+    <string name="share_line_label">Line</string>
+    <string name="share_facebook_label">Facebook</string>
+    <string name="share_twitter_label">Twitter</string>
     <string name="action_exit">Quitter</string>
     <string name="share_to_miliao_target_feeds">Groupes</string>
     <string name="share_to_miliao_target_friends">Amis</string>
-    <string name="share_to_miliao_target_union">Faire du sport avec des copains</string>
+    <string name="share_to_miliao_target_union">Faire du sport avec des amis</string>
+    <string name="share_miliao_path_selector">Partager avec</string>
+    <string name="ok">Ok</string>
     <string name="cancel">Annuler</string>
+    <string name="action_loading">Chargement</string>
     <string name="come_from_xiaomi_bracelet">Mi Fit</string>
+    <string name="dialog_confirm">Confirmer</string>
+    <string name="alert_title_unable_start_camera">Impossible de démarrer la caméra</string>
+    <string name="alert_body_unable_start_camera">Vérifier les permissions de la caméra</string>
+    <string name="title_activity_heart_rate_main">HeartRateMainActivity</string>
     <string name="hello_world">Salut tout le monde !</string>
     <string name="action_settings">Paramètres</string>
+    <string name="title_activity_heart_rate_setting">HeartRateSettingActivity</string>
+    <string name="picker_menu_done">Terminé</string>
+    <string name="open_gallery">Ouvrir la gallerie</string>
+    <string name="scan_label">Scanner le QR Code.</string>
     <string name="pull_to_refresh_pull_label">Tirez pour rafraîchir…</string>
     <string name="pull_to_refresh_release_label">Relâcher pour rafraîchir…</string>
     <string name="pull_to_refresh_refreshing_label">Chargement…</string>
+    <string name="pull_to_refresh_from_bottom_pull_label">Charger plus</string>
+    <string name="pull_to_refresh_from_bottom_release_label">Tirez pour rafraîchir</string>
+    <string name="pull_to_refresh_from_bottom_refreshing_label">Tirez pour rafraîchir</string>
+    <string name="shoes_smart_shoes">%sSmart Shoes</string>
+    <string name="shoes_guangsu">Guang Su</string>
+    <string name="shoes_used_distance">Life Span</string>
+    <string name="shoes_static_calibrate">Calibrer</string>
+    <string name="shoes_release_binding">Déconnecter</string>
+    <string name="shoes_introduction">Introduction</string>
+    <string name="shoes_bind">Connecter</string>
+    <string name="shoes_buy">Acheter</string>
+    <string name="shoes_description">"La durée de vie des chaussures est d'environ 400-800km"</string>
+    <string name="shoes_calibrate_instruction">"stretch foot
+wait for 5s"</string>
+    <string name="shoes_calibrate_suggestion">Suggestion: Please re-calibrate when the smart module is reset.</string>
+    <string name="shoes_start_calibrate">Start Calibrate</string>
+    <string name="shoes_calibrating">Calibrating</string>
+    <string name="shoes_calibrate_failed">Calibrating failed</string>
+    <string name="shoes_recalibrate">Re-calibrate</string>
+    <string name="shoes_unbind_prompt">After release binding, no information will get</string>
+    <string name="shoes_unbind">Release Binding</string>
+    <string name="shoes_cancel">Cancel</string>
+    <string name="shoes_bind_prompt">Put in the ...</string>
+    <string name="shoes_bind_title">Bind Shoes</string>
+    <string name="shoes_binding">Binding...</string>
+    <string name="shoes_binded">Binded</string>
+    <string name="shoes_select_shoes">Select Shoes</string>
+    <string name="shoes_usage">%skilometer(s)</string>
+    <string name="shoes_distance" formatted="false">%d / %dkilometer(s)</string>
+    <string name="shoes_invalid_code">bar code wrong</string>
+    <string name="shoes_bind_failed">bind failed</string>
+    <string name="shoes_bind_success">bind success</string>
+    <string name="shoes_count_down_text">%ds</string>
+    <string name="shoes_calibrate_success">calibration success</string>
+    <string name="shoes_unbind_success">unbind success</string>
+    <string name="shoes_bind_first">please bind first</string>
+    <string name="shoes_calibrate_connecting">connecting</string>
+    <string name="shoes_calibrate_connect_failed">connect failed, retry</string>
+    <string name="shoes_bind_change_text" formatted="false">You have bonded %s, are you sure to bond %s?</string>
+    <string name="shoes_bind_change_ok">replace</string>
+    <string name="shoes_firmware_version">Firmware version</string>
+    <string name="shoes_fetching">Fetching</string>
+    <string name="shoes_fetching_failed">Failed</string>
+    <string name="data_not_supported">--</string>
+    <string name="running_helper">Suivi d'itinéraire</string>
+    <string name="running_no_gps">Use GPS to keep track of your route.</string>
+    <string name="running_set_speed">Set speed</string>
+    <string name="running_speed">Speed</string>
+    <string name="running_speed_with_unit">km/h</string>
+    <string name="running_real_time_pace">Pace (km)</string>
+    <string name="running_pace">Pace</string>
+    <string name="running_pace_lable">Pace</string>
+    <string name="running_set_goal">Goal reminder</string>
+    <string name="running_set_dist">Distance reminder</string>
+    <string name="running_speed_detail">%.2fkm/h</string>
+    <string name="running_pace_detail">%s/km</string>
+    <string name="running_distance_detail">%.2fkm</string>
+    <string name="running_distance_desc">Kilometers</string>
+    <string name="running_time_desc">Time</string>
+    <string name="running_start">Start</string>
+    <string name="running_pause">Pause</string>
+    <string name="running_long_press_to_pause">Long Press To Pause</string>
+    <string name="running_resume">Resume</string>
+    <string name="running_stop">Stop</string>
+    <string name="running_gps_turnon">Turn on</string>
+    <string name="running_gps_cancel">Cancel</string>
+    <string name="running_settings">Settings</string>
+    <string name="running_history">History</string>
+    <string name="running_slider_prompt">>>>Slide right to unlock</string>
+    <string name="running_distance">Distance</string>
+    <string name="running_distance_unit">Distance(km)</string>
+    <string name="running_average_speed">Average</string>
+    <string name="running_step">Steps</string>
+    <string name="running_altitude">Altitude</string>
+    <string name="running_burn">Burn</string>
+    <string name="running_start_time">Start</string>
+    <string name="running_end_time">End</string>
+    <string name="running_history_title">History</string>
+    <string name="running_history_date" formatted="false">%d/%d/%d</string>
+    <string name="running_history_no_data">No data</string>
+    <string name="running_history_no_more_data">No more data</string>
+    <string name="running_history_no_data_refresh">Tap to refresh</string>
+    <string name="running_history_no_data_refreshing">Refreshing…</string>
+    <string name="running_cost_cal">%.1f cal</string>
+    <string name="running_prepare_map">Preparing data for sharing…</string>
+    <string name="running_prompt_per_kilometer" formatted="false">You have run %s kilometers. It cost %s. The pace is %s.%s</string>
+    <string name="running_prompt_great">Great!!</string>
+    <string name="running_prompt_come_on">Go!!</string>
+    <string name="running_kilometers">km</string>
+    <string name="running_per_kilometers">/km</string>
+    <string name="running_kilometers_per_hour">km/h</string>
+    <string name="running_gps_locating">GPS locating…</string>
+    <string name="running_set_pace">Set pace</string>
+    <string name="running_lable_miles_fastest">Km fastest</string>
+    <string name="running_lable_km_slowest">Km slowest</string>
+    <string name="running_share">Share</string>
+    <string name="running_watermark">Watermark</string>
     <string name="sport_ranking_desc_poor">%s: Most users placed ahead of you.</string>
     <string name="sport_ranking_desc_normal" formatted="false">Vous avez placé &lt;b>%s&lt;/b> en dehors de %s utilisateurs.</string>
     <string name="sport_ranking_desc_great">Excellent travail !</string>
