--- a/MiFit/res/values-fr/strings.xml
+++ b/MiFit/res/values-fr/strings.xml
@@ -632,11 +632,11 @@ Excellent travail!"</string>
     <string name="dynamic_pull_last_sync_time">Dernière synchronisation %s</string>
     <string name="dynamic_pull_connecting_bracelet">Connexion…</string>
     <string name="dynamic_pull_sync_after_connected">Information sur votre band</string>
-    <string name="dynamic_pull_syncing">Getting band data…</string>
+    <string name="dynamic_pull_syncing">Synchronisation en cours…</string>
     <string name="dynamic_pull_syncing_progress">Synchronisation (%s%%)</string>
-    <string name="dynamic_pull_release_to_sync">Release to sync band</string>
-    <string name="dynamic_pull_pull_to_sync">Pull to sync band</string>
-    <string name="dynamic_pull_sync_error">"Couldn't sync band"</string>
+    <string name="dynamic_pull_release_to_sync">Lâcher pour synchroniser</string>
+    <string name="dynamic_pull_pull_to_sync">Tirez pour synchroniser</string>
+    <string name="dynamic_pull_sync_error">"Synchronisation impossible"</string>
     <string name="bind_weixin_qrcode_name">Code QR</string>
     <string name="mili_exit_login_info_unbind">La déconnexion va désappairer votre band de cet appareil. </string>
     <string name="mili_exit_login_info_unlock">"Vous ne serez pas en mesure de débloquer cet appareil à l'aide de votre band après votre déconnexion. "</string>
