--- a/MiHome/res/values-fr/strings.xml
+++ b/MiHome/res/values-fr/strings.xml
@@ -1,6 +1,71 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="msp_str_null" />
+    <string name="msp_app_name">Services de paiement Alipay</string>
+    <string name="msp_error_title_default">Rapide</string>
+    <string name="msp_action_settings">Paramètres</string>
+    <string name="msp_xlistview_header_hint_normal">Tirez pour actualiser</string>
+    <string name="msp_xlistview_header_last_time">Dernière mise à jour:</string>
+    <string name="msp_xlistview_footer_hint_normal">Voir plus</string>
+    <string name="msp_close">Quitter</string>
+    <string name="msp_memo_user_cancel">"L'opération a été annulée"</string>
+    <string name="msp_memo_app_cancel">Erreur du programme ou des données.</string>
+    <string name="msp_memo_server_cancel">Le système est occupé, réessayez ultérieurement.</string>
+    <string name="msp_memo_repeat_pay">"Impossible d'effectuer des paiements en double"</string>
+    <string name="msp_mini_safty_code_info">Le code de sécurité de la carte de crédit est imprimé sur la zone de signature au verso, généralement les 3 chiffres ou 4 derniers chiffres</string>
+    <string name="msp_mini_safty_code_title">Description de code de sécurité</string>
+    <string name="msp_mini_read_protocal_title">"Choisissez de lire l'accord"</string>
+    <string name="msp_mini_choose_identitify">Sélectionnez la catégorie de documents</string>
+    <string name="msp_mini_card_type_text">Type de carte</string>
+    <string name="confirm_title">Confirmer</string>
+    <string name="cardUnbing">Dissocier</string>
+    <string name="cardDefaultuse">Utiliser la carte par défaut</string>
+    <string name="cardCancle">Annuler</string>
+    <string name="channel">CommonChannelInfo</string>
+    <string name="mini_loading_1">Chargement...</string>
+    <string name="mini_loading">Chargement...</string>
+    <string name="mini_net_error">Impossible de se connecter au réseau, réessayer ?</string>
+    <string name="mini_redo">Réessayez</string>
+    <string name="mini_error_title_default">Attention</string>
+    <string name="mini_app_error">Le système est occupé, réessayez ultérieurement</string>
+    <string name="mini_debug_app_error">"Une erreur s'est produite ! Cliquez sur Ok pour quitter le programme"</string>
+    <string name="mini_countdown_info">Obtient le checksum</string>
+    <string name="mini_format_error">Erreur de format</string>
+    <string name="mini_page_add_title">Ajouter une carte</string>
+    <string name="mini_page_add_hint">Numéro de carte bancaire</string>
+    <string name="mini_card_no">Numéro de carte</string>
+    <string name="mini_page_add_tips">"PayPal fournit le mot de passe de paiement et vous envoie un SMS d'authentification pour une double protection"</string>
+    <string name="mini_page_msg_title">Remplir les informations de la carte bancaire</string>
+    <string name="mini_page_next">Étape suivante</string>
+    <string name="mini_page_name">Le nom</string>
+    <string name="mini_page_input_name_hint">Nom du titulaire de carte</string>
+    <string name="mini_id_no">"Numéro de carte d'identité"</string>
+    <string name="mini_page_input_id_hint">Le numéro du certificat</string>
+    <string name="mini_page_msg_check">Les informations sont cryptées, uniquement pour les services bancaires de vérification</string>
+    <string name="mini_page_msg_choose_type">Sélectionnez un type de document</string>
+    <string name="mini_date">Période de validité</string>
+    <string name="mini_date_hint">Mois/Année</string>
+    <string name="mini_safe_no">Code de sécurité</string>
+    <string name="mini_safe_no_hint">Numéro à trois chiffres</string>
+    <string name="mini_phone_no">Numéro de téléphone mobile</string>
+    <string name="mini_phone_no_hint">Numéro de téléphone de réserve Banque</string>
+    <string name="mini_agree">OK</string>
+    <string name="mini_quickpay_protocol">《Contrat de service》</string>
+    <string name="mini_password">Mot de passe</string>
+    <string name="mini_switch">Raccourci</string>
+    <string name="mini_car_default_use">Utiliser la carte par défaut pour payer</string>
+    <string name="mini_car_limit_phone">Régler la limite, veuillez contacter le service clientèle :</string>
+    <string name="mini_password_hint">Veuillez entrer votre mot de passe</string>
+    <string name="mini_canel_install_msp">"Vous avez annulé l'installation de paiement mobile"</string>
+    <string name="mini_canel_install_wallet">"Vous avez annulé l'installation du portefeuille"</string>
+    <string name="mini_setting_default_tips">Utiliser la carte par défaut pour payer</string>
+    <string name="mini_setting_view_all_bankcard">Voir tous les(%1$dZhang)</string>
+    <string name="mini_setting_debit_cards_tips">Carte de débit</string>
+    <string name="mini_setting_credit_cards_tips">Carte de crédit</string>
+    <string name="mini_setting_pay_password">Mot de passe de paiement</string>
+    <string name="mini_weakpassword_error_same">Veuillez ne pas utiliser le même numéro</string>
+    <string name="mini_weakpassword_error_serial">Veuillez ne pas utiliser des numéros consécutifs</string>
+    <string name="mini_str_null" />
     <string name="app_name">Mi Home</string>
     <string name="action_settings">Paramètres</string>
     <string name="hello_world">Hello World</string>
@@ -162,6 +227,12 @@ Remplacez le filtre et rallumez l'appareil en appuyant en même temps sur le bou
     <string name="air_purifier_set_success">Réglage réussi</string>
     <string name="air_purifier_set_fail">Échec du règlage</string>
     <string name="air_purifier_pm25">Particules PM2.5</string>
+    <string name="air_purifier_strong">>Turbo</string>
+    <string name="air_purifier_auto">Automatique</string>
+    <string name="air_purifier_high">Fort</string>
+    <string name="air_purifier_medium">Modéré</string>
+    <string name="air_purifier_low">Faible</string>
+    <string name="air_purifier_silient">Silencieux</string>
     <string name="air_purifier_v2">"Mi Purificateur d'air"</string>
     <string name="air_purifier_v2_filter">Filtre</string>
     <string name="air_purifier_v2_air_quality">"Qualité de l'air"</string>
@@ -425,7 +496,25 @@ Après avoir remplacé et activé le filtre, appuyez sur le bouton de réinitial
     <string name="air_purifier_v3_set_success">Réglage réussi</string>
     <string name="air_purifier_v3_set_fail">Échec du réglage</string>
     <string name="app_name2">Mi Home</string>
-    <string name="splash_copy_right">Copyright 2014-2015 © By Xiaomi</string>
+    <string name="aircon_timer">Minuterie</string>
+    <string name="aircon_wind_speed">Vitesse de la ventilation</string>
+    <string name="aircon_wind_direction">Direction de la ventilation</string>
+    <string name="aircon_set_temp">Température</string>
+    <string name="aircon_temp_symbol">°</string>
+    <string name="aircon_wind_speed_adjust">Ajustement de la ventilation</string>
+    <string name="aircon_wind_direction_adjust">Ajustement de la ventilation</string>
+    <string name="aircon_wind_direction_left_bottom">En bas à gauche</string>
+    <string name="aircon_wind_sweep">A balayé</string>
+    <string name="aircon_hoting">Chauffage</string>
+    <string name="aircon_colding">Réfrigération</string>
+    <string name="aircon_auto_mode">Mode auto</string>
+    <string name="aircon_cold_mode">Mode climatisation</string>
+    <string name="aircon_hot_mode">Mode chauffage</string>
+    <string name="aircon_dehumidifier_mode">Mode de déshumidification</string>
+    <string name="aircon_wind_mode">Mode de ventilateur</string>
+    <string name="aircon_bracelet_control">Commande manuelle</string>
+    <string name="aircon_only_support_xiaomi_bracelet">Prend en charge uniquement les Mi Band</string>
+    <string name="aircon_joint_mark">|</string>
     <string name="sans_serif">sans-serif</string>
     <string name="week_day_0">0</string>
     <string name="week_day_1">1</string>
@@ -934,6 +1023,7 @@ Type : piles bouton %2$s"</string>
     <string name="intelligent_plug_four">4</string>
     <string name="intelligent_plug_five">5</string>
     <string name="intelligent_plug_six">6</string>
+    <string name="intelligent_plug_dunhao">、</string>
     <string name="intelligent_plug_finish">Ok</string>
     <string name="irv2_device_name">Contrôleur infrarouge Mi</string>
     <string name="irv2_main_copy">Copier la télécommande</string>
@@ -1132,71 +1222,6 @@ Appui long pour revenir"</string>
     <string name="kick_device_error">Vous ne pouvez pas bloquer ce périphérique</string>
     <string name="add_back_device_error">Vous ne pouvez pas ajouter ce périphérique</string>
     <string name="add_or_kick_device_failed">"Quelque chose d'anormal est survenu"</string>
-    <string name="msp_app_name">Services de paiement Alipay</string>
-    <string name="msp_error_title_default">Rapide</string>
-    <string name="msp_action_settings">Paramètres</string>
-    <string name="msp_xlistview_header_hint_normal">Tirez pour actualiser</string>
-    <string name="msp_xlistview_header_last_time">Dernière mise à jour:</string>
-    <string name="msp_xlistview_footer_hint_normal">Voir plus</string>
-    <string name="msp_close">Quitter</string>
-    <string name="msp_memo_user_cancel">"L'opération a été annulée"</string>
-    <string name="msp_memo_app_cancel">Erreur du programme ou des données.</string>
-    <string name="msp_memo_server_cancel">Le système est occupé, réessayez ultérieurement.</string>
-    <string name="msp_memo_repeat_pay">"Impossible d'effectuer des paiements en double"</string>
-    <string name="msp_mini_safty_code_info">Le code de sécurité de la carte de crédit est imprimé sur la zone de signature au verso, généralement les 3 chiffres ou 4 derniers chiffres</string>
-    <string name="msp_mini_safty_code_title">Description de code de sécurité</string>
-    <string name="msp_mini_read_protocal_title">"Choisissez de lire l'accord"</string>
-    <string name="msp_mini_choose_identitify">Sélectionnez la catégorie de documents</string>
-    <string name="msp_mini_card_type_text">Type de carte</string>
-    <string name="confirm_title">Confirmer</string>
-    <string name="cardUnbing">Dissocier</string>
-    <string name="cardDefaultuse">Utiliser la carte par défaut</string>
-    <string name="cardCancle">Annuler</string>
-    <string name="channel">CommonChannelInfo</string>
-    <string name="mini_loading_1">Chargement...</string>
-    <string name="mini_loading">Chargement...</string>
-    <string name="mini_net_error">Impossible de se connecter au réseau, réessayer ?</string>
-    <string name="mini_redo">Réessayez</string>
-    <string name="mini_error_title_default">Attention</string>
-    <string name="mini_app_error">Le système est occupé, réessayez ultérieurement</string>
-    <string name="mini_debug_app_error">"Une erreur s'est produite ! Cliquez sur Ok pour quitter le programme"</string>
-    <string name="mini_countdown_info">Obtient le checksum</string>
-    <string name="mini_format_error">Erreur de format</string>
-    <string name="mini_page_add_title">Ajouter une carte</string>
-    <string name="mini_page_add_hint">Numéro de carte bancaire</string>
-    <string name="mini_card_no">Numéro de carte</string>
-    <string name="mini_page_add_tips">"PayPal fournit le mot de passe de paiement et vous envoie un SMS d'authentification pour une double protection"</string>
-    <string name="mini_page_msg_title">Remplir les informations de la carte bancaire</string>
-    <string name="mini_page_next">Étape suivante</string>
-    <string name="mini_page_name">Le nom</string>
-    <string name="mini_page_input_name_hint">Nom du titulaire de carte</string>
-    <string name="mini_id_no">"Numéro de carte d'identité"</string>
-    <string name="mini_page_input_id_hint">Le numéro du certificat</string>
-    <string name="mini_page_msg_check">Les informations sont cryptées, uniquement pour les services bancaires de vérification</string>
-    <string name="mini_page_msg_choose_type">Sélectionnez un type de document</string>
-    <string name="mini_date">Période de validité</string>
-    <string name="mini_date_hint">Mois/Année</string>
-    <string name="mini_safe_no">Code de sécurité</string>
-    <string name="mini_safe_no_hint">Numéro à trois chiffres</string>
-    <string name="mini_phone_no">Numéro de téléphone mobile</string>
-    <string name="mini_phone_no_hint">Numéro de téléphone de réserve Banque</string>
-    <string name="mini_agree">OK</string>
-    <string name="mini_quickpay_protocol">《Contrat de service》</string>
-    <string name="mini_password">Mot de passe</string>
-    <string name="mini_switch">Raccourci</string>
-    <string name="mini_car_default_use">Utiliser la carte par défaut pour payer</string>
-    <string name="mini_car_limit_phone">Régler la limite, veuillez contacter le service clientèle :</string>
-    <string name="mini_password_hint">Veuillez entrer votre mot de passe</string>
-    <string name="mini_canel_install_msp">"Vous avez annulé l'installation de paiement mobile"</string>
-    <string name="mini_canel_install_wallet">"Vous avez annulé l'installation du portefeuille"</string>
-    <string name="mini_setting_default_tips">Utiliser la carte par défaut pour payer</string>
-    <string name="mini_setting_view_all_bankcard">Voir tous les(%1$dZhang)</string>
-    <string name="mini_setting_debit_cards_tips">Carte de débit</string>
-    <string name="mini_setting_credit_cards_tips">Carte de crédit</string>
-    <string name="mini_setting_pay_password">Mot de passe de paiement</string>
-    <string name="mini_weakpassword_error_same">Veuillez ne pas utiliser le même numéro</string>
-    <string name="mini_weakpassword_error_serial">Veuillez ne pas utiliser des numéros consécutifs</string>
-    <string name="mini_str_null" />
     <string name="passport_manager">Compte Mi</string>
     <string name="passport_binding_title">Ajouter un compte Mi</string>
     <string name="passport_binding_found_system_account">Identifiant compte Mi:</string>
