--- a/Mi Remote.apk/res/values-fr/strings.xml
+++ b/Mi Remote.apk/res/values-fr/strings.xml
@@ -261,6 +261,7 @@ Pour activer votre compte, suivez le
     <string name="video_history_earlier">Earlier</string>
     <string name="video_history_title">Historique</string>
     <string name="vendor_yaokan">Yaokan</string>
+    <string name="vendor_kookong" />
     <string name="vendor_peel">Peel</string>
     <string name="by">"Par "</string>
     <string name="technical_support" />
@@ -271,25 +272,25 @@ Pour activer votre compte, suivez le
     <string name="loading_brand_info">Chargement…</string>
     <string name="loading_ir_data">Chargement…</string>
     <string name="loading_get">Chargement…</string>
-    <string name="match_data">Pairing info</string>
-    <string name="steps">Attempt #%d</string>
-    <string name="no_data">No info</string>
+    <string name="match_data">Info de jumelage</string>
+    <string name="steps">Essai #%d</string>
+    <string name="no_data">"Pas d'info"</string>
     <string name="stb">Set-top box</string>
     <string name="carrier_data">Carrier info</string>
-    <string name="sorry">Error</string>
-    <string name="title_nodata_feedback">"Couldn't get device info"</string>
+    <string name="sorry">Erreur</string>
+    <string name="title_nodata_feedback">"Impossible d'obtenir des informations sur l'appareil"</string>
     <string name="match_succuss">"You're all set"</string>
-    <string name="succeed_title">Paired</string>
-    <string name="succeed_content">Paired %3$s %4$s successfully.</string>
-    <string name="succeed_finish">OK</string>
-    <string name="fail_title">"Couldn't pair"</string>
-    <string name="fail_content">"    Couldn't find pairing info."</string>
+    <string name="succeed_title">Connecté</string>
+    <string name="succeed_content">Connecté %3$s %4$s avec succès.</string>
+    <string name="succeed_finish">Ok</string>
+    <string name="fail_title">"Connection impossible"</string>
+    <string name="fail_content">"    Impossible d'obtenir les informations de connection."</string>
     <string name="fail_device_type">Type</string>
-    <string name="fail_device_brand">Brand</string>
-    <string name="fail_device_model">Model</string>
+    <string name="fail_device_brand">Marque</string>
+    <string name="fail_device_model">Modèle</string>
     <string name="fail_add_device_photo">Add device photo</string>
     <string name="fail_add_controller_photo">Add remote photo</string>
-    <string name="fail_feedback">Feedback</string>
+    <string name="fail_feedback">Commentaire</string>
     <string name="bullet_hint">Show this message on screen</string>
     <string name="mitv_assistant_setting_version">Mi TV Control Version %1$s</string>
     <string name="mibox">Mi Box</string>
@@ -316,8 +317,8 @@ Pour activer votre compte, suivez le
     <string name="ir_device_sound">Speakers</string>
     <string name="ir_device_stb">Cable Box</string>
     <string name="ir_device_tv">TV</string>
-    <string name="ir_device_milink">无线设备</string>
-    <string name="ir_device_add">添加新设备</string>
+    <string name="ir_device_milink">Matériels sans fil</string>
+    <string name="ir_device_add">Ajouter une nouvel appareil</string>
     <string name="supporting_soon">Coming soon</string>
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
@@ -366,9 +367,9 @@ Pour activer votre compte, suivez le
     <string name="maybe_is">Make sure:</string>
     <string name="no_network">"· You're connected to the internet"</string>
     <string name="network_unstable">· You have a stable connection</string>
-    <string name="select_device">添加遥控器</string>
-    <string name="select_brand">选择%s品牌</string>
-    <string name="press_to_match">点击发射</string>
+    <string name="select_device">Ajouter une télécommande</string>
+    <string name="select_brand">Choisissez %s marque</string>
+    <string name="press_to_match">Cliquez</string>
     <string name="edit_ir_device">遥控器命名</string>
     <string name="ir_device_name">遥控器名称</string>
     <string name="location_select">快速命名</string>
@@ -400,7 +401,7 @@ Pour activer votre compte, suivez le
     <string name="exit">退出</string>
     <string name="eject">﻿弹出</string>
     <string name="confirm_on">﻿确认</string>
-    <string name="home_zhuye">﻿主页</string>
+    <string name="home_zhuye">﻿Accueil</string>
     <string name="delete_device_frame">是否删除%1$s</string>
     <string name="yes">是</string>
     <string name="no">否</string>
@@ -432,7 +433,7 @@ Pour activer votre compte, suivez le
     <string name="connect_to_retry">未连接网络，请联网后重试</string>
     <string name="submit_fail_retry">提交失败了，请您重新提交，谢谢</string>
     <string name="click_to_retry">点击重试</string>
-    <string name="scanning_milink">正在等待无线设备</string>
+    <string name="scanning_milink">"Recherche d'appareil"</string>
     <string name="milink_nowifi">未连接Wifi网络，无法连接设备</string>
     <string name="retry_for_more">点击获取更多</string>
     <string name="app_exit_tip">再按一次退出</string>
@@ -456,4 +457,60 @@ Pour activer votre compte, suivez le
     <string name="download_assistant">投屏神器</string>
     <string name="dialog_install_assistant_content">安装小米公司专门开发的投屏神器应用，玩转小米电视/盒子</string>
     <string name="downloading">正在下载</string>
+    <string name="tv_broadcast">电视/广播</string>
+    <string name="find_milink_frame">共找到%1$d台小米设备</string>
+    <string name="find_adb_frame">共找到%1$d台adb设备</string>
+    <string name="click_to_expend">点击展开</string>
+    <string name="click_to_shrink">点击收回</string>
+    <string name="add_more">添加更多红外设备</string>
+    <string name="gamepad">Gamepad</string>
+    <string name="gamepad_rule">Ne fonctionne pas à l'horizontale</string>
+    <string name="feedback">Commentaire</string>
+    <string name="check_upgrade">Vérifiez les mise à jour</string>
+    <string name="current_version_frame">Version actuelle %s</string>
+    <string name="faq">常见问题</string>
+    <string name="diagnose">异常诊断</string>
+    <string name="current_version_latest">Vous utilisez la dernière version</string>
+    <string name="to_qq">启动QQ加入群组</string>
+    <string name="to_qq_maintext">加入群组快速反馈意见</string>
+    <string name="to_qq_subtext">群号：259685862</string>
+    <string name="no_qq">您尚未安装QQ</string>
+    <string name="guid_zero">· Votre téléphone prend en charge le mode télécommande en wifi seulement : </string>
+    <string name="guid_one">· Utilisez le même réseau wi-fi que vos appareils</string>
+    <string name="guid_two">· Vérifiez les réglages de votre routeur</string>
+    <string name="guid_three">· Certaines fonctions peuvent ne pas fonctionner</string>
+    <string name="remote_controller_name">Télécommande</string>
+    <string name="epg_channel_group_open">展开全部频道</string>
+    <string name="epg_episode_open">展开全部</string>
+    <string name="epg_booked_str">预约成功</string>
+    <string name="epg_unbooked_str">可预约</string>
+    <string name="rc_name">Télécommande</string>
+    <string name="epg_name">Emission de TV</string>
+    <string name="channel_catogory_name">频道</string>
+    <string name="all_catogory_name">全部</string>
+    <string name="notification_title">预约提醒</string>
+    <string name="notification_str1">台《</string>
+    <string name="notification_str2">》半小时后开始</string>
+    <string name="epg_status_playing_text">正在播放</string>
+    <string name="epg_detail_title_text">简介</string>
+    <string name="episode_intro_title_text">分集剧集介绍</string>
+    <string name="actor_intro_title_text">主要角色</string>
+    <string name="episode_title">第%1$d集</string>
+    <string name="pull_down_refresh">下拉刷新</string>
+    <string name="release_to_refresh">松开刷新...</string>
+    <string name="refreshing">正在刷新...</string>
+    <string name="refreshing_no_point">载入中</string>
+    <string name="pull_up_refresh">Pull up to refresh</string>
+    <string name="refreshing_retry">加载失败，重试？</string>
+    <string name="epg_bottom_title_textview_str">点击绑定机顶盒</string>
+    <string name="epg_bottom_subtitle_textview_str">绑定机顶盒查看更多节目信息</string>
+    <string name="epg_bottom_subtitle_textview_str2">点击进入遥控器</string>
+    <string name="activity_stb_list_title">选择机顶盒</string>
+    <string name="current_stb">当前机顶盒</string>
+    <string name="current_play">正在播放:  </string>
+    <string name="channel_num">——</string>
+    <string name="no_current_play">正在播放:  无</string>
+    <string name="no_program">暂无节目</string>
+    <string name="no_introduction">暂时没有简介</string>
+    <string name="play_on_tv">在电视上播放</string>
 </resources>
