--- a/Mi Remote.apk/res/values-fr/strings.xml
+++ b/Mi Remote.apk/res/values-fr/strings.xml
@@ -288,24 +288,24 @@ Pour activer votre compte, suivez le
     <string name="fail_device_type">Type</string>
     <string name="fail_device_brand">Marque</string>
     <string name="fail_device_model">Modèle</string>
-    <string name="fail_add_device_photo">Add device photo</string>
-    <string name="fail_add_controller_photo">Add remote photo</string>
+    <string name="fail_add_device_photo">Ajouter un appareil photo</string>
+    <string name="fail_add_controller_photo">Ajouter une télécommande de photo à distance</string>
     <string name="fail_feedback">Commentaire</string>
-    <string name="bullet_hint">Show this message on screen</string>
+    <string name="bullet_hint">Afficher ce message à l\'écran</string>
     <string name="mitv_assistant_setting_version">Mi TV Control Version %1$s</string>
     <string name="mibox">Mi Box</string>
     <string name="mitv">Mi TV</string>
-    <string name="airkan_disconnect_display_name">Not paired</string>
-    <string name="app_install_count">%1$s installed</string>
-    <string name="management_video_recent_watch">Recently watched</string>
-    <string name="management_video_favor">History and Starred</string>
+    <string name="airkan_disconnect_display_name">Non jumelé</string>
+    <string name="app_install_count">%1$s installé</string>
+    <string name="management_video_recent_watch">Récemment vu</string>
+    <string name="management_video_favor">Historique et Suivis</string>
     <string name="management_app_management">Apps</string>
     <string name="management_settings">Paramètres</string>
     <string name="connected">Connecté</string>
-    <string name="privacy_title">Termes et conditions</string>
-    <string name="privacy_content">"By using this product, you're agreeing to our "<u>Privacy Policy</u> and <u>Terms of Service</u>. Mi Remote needs to connect to the internet to work normally.</string>
-    <string name="privacy_nohit">"Don't show again"</string>
-    <string name="ir_device_air_cleaner">Mi Air Purifier</string>
+    <string name="privacy_title">Conditions d\'utilisation</string>
+    <string name="privacy_content">"En utilisant ce produit, vous êtes d'accord avec notre <u>Politique de confidentialité</u> et nos <u>Conditions d'utilisation</u>. Mi Remote a besoin de se connecter à internet pour fonctionner normalement."</string>
+    <string name="privacy_nohit">"Ne plus afficher"</string>
+    <string name="ir_device_air_cleaner">Purificateur d\'air Mi</string>
     <string name="ir_device_air_condition">A/C</string>
     <string name="ir_device_iptv">IPTV</string>
     <string name="ir_device_box">Set-top Box</string>
@@ -318,34 +318,34 @@ Pour activer votre compte, suivez le
     <string name="ir_device_stb">Cable Box</string>
     <string name="ir_device_tv">TV</string>
     <string name="ir_device_milink">Matériels sans fil</string>
-    <string name="ir_device_add">Ajouter une nouvel appareil</string>
-    <string name="supporting_soon">Coming soon</string>
-    <string name="delete">Delete</string>
-    <string name="rename">Rename</string>
-    <string name="delete_confirm">Unpair device?</string>
-    <string name="delete_desc">"You won't be able to control “%s” using Mi Remote."</string>
-    <string name="rename_hint">"Enter device's name"</string>
-    <string name="add_device">Pair new device</string>
-    <string name="add_new_control">Pair new remote</string>
-    <string name="add_control">Pair remote</string>
-    <string name="loading_brand">Getting info…</string>
-    <string name="other">Other</string>
-    <string name="search_history">Search</string>
-    <string name="video">Videos</string>
+    <string name="ir_device_add">Ajouter un nouvel appareil</string>
+    <string name="supporting_soon">À venir</string>
+    <string name="delete">Supprimer</string>
+    <string name="rename">Renomer</string>
+    <string name="delete_confirm">Dissocier l\'appareil ?</string>
+    <string name="delete_desc">"Vous ne serez pas en mesure de contrôler “%s” using Mi Remote."</string>
+    <string name="rename_hint">"Saisissez le nom de votre appareil"</string>
+    <string name="add_device">Apparaît un nouvel appareil</string>
+    <string name="add_new_control">Apparaît une nouvelle télécommande</string>
+    <string name="add_control">Apparaît la télécommande</string>
+    <string name="loading_brand">Obtenir des infos…</string>
+    <string name="other">Autre</string>
+    <string name="search_history">Rechercher</string>
+    <string name="video">Vidéos</string>
     <string name="application">Apps</string>
-    <string name="similar">Related</string>
+    <string name="similar">Apparentés</string>
     <string name="bulletin">Messages</string>
-    <string name="get_info_failed">"Couldn't get info"</string>
-    <string name="has_installed">Installed</string>
-    <string name="upgrading">Updating…</string>
-    <string name="installing">Installing…</string>
-    <string name="install_succed">%s installed successfully</string>
-    <string name="install_failed">"Couldn't install %s"</string>
-    <string name="download_times">Downloads: %1$d</string>
-    <string name="please_enter">"Input field can't be empty"</string>
-    <string name="max_enter">"Can't exceed %d characters"</string>
+    <string name="get_info_failed">"Impossible d'obtenir d'informations"</string>
+    <string name="has_installed">Installé</string>
+    <string name="upgrading">Mise à jour…</string>
+    <string name="installing">Installation…</string>
+    <string name="install_succed">%s installé avec succès</string>
+    <string name="install_failed">"N\'a pas pu installer %s"</string>
+    <string name="download_times">Téléchargements : %1$d</string>
+    <string name="please_enter">"Le champ de saisie ne peut être vide"</string>
+    <string name="max_enter">"Vous ne pouvez pas dépasser %d caractères"</string>
     <string name="ir_ac">u020A/C</string>
-    <string name="choose_ac">Choose remote</string>
+    <string name="choose_ac">Choisissez une télécommande</string>
     <string name="ac_gree">Gree A/C</string>
     <string name="outdoor_temp_unknown">Unknown</string>
     <string name="unknown">Unknown</string>
