--- a/Mi Remote.apk/res/values-fr/strings.xml
+++ b/Mi Remote.apk/res/values-fr/strings.xml
@@ -394,17 +394,17 @@ Pour activer votre compte, suivez le
     <string name="mode">模式</string>
     <string name="cool_mode">冷气</string>
     <string name="hot_mode">暖风</string>
-    <string name="temperature">温度</string>
+    <string name="temperature">Température</string>
     <string name="mute">静音</string>
-    <string name="volume">﻿音量</string>
-    <string name="channel">频道</string>
-    <string name="exit">退出</string>
-    <string name="eject">﻿弹出</string>
-    <string name="confirm_on">﻿确认</string>
+    <string name="volume">﻿Volume</string>
+    <string name="channel">Chaine</string>
+    <string name="exit">Sortir</string>
+    <string name="eject">﻿Ejecter</string>
+    <string name="confirm_on">﻿Confirmer</string>
     <string name="home_zhuye">﻿Accueil</string>
     <string name="delete_device_frame">是否删除%1$s</string>
-    <string name="yes">是</string>
-    <string name="no">否</string>
+    <string name="yes">Oui</string>
+    <string name="no">Non</string>
     <string name="switch_place">切换</string>
     <string name="place_frame">位置：</string>
     <string name="current_place">当前位置：</string>
